[package]
name = "rqst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = {git = "https://github.com/cloudflare/quiche.git", features = ["qlog"]}
ring = "0.16"
url = "1"
tokio = { version = "1.17", features = ["full", "tracing"] }
num_cpus = "1.0"
bytes = "1"
pcap-file = "1.1.1"
clap = { version = "3.1.3", features = ["cargo"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.6.1"
flexi_logger = "0.22"
socket2 = "0.4"
if-addrs = "0.7"
if-watch = "0.3"
async-stream = "0.3.3"
tokio-stream = "0.1.9"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
tokio-tun = "0.5.3"

[target.'cfg(windows)'.dependencies]
once_cell = "1.12"
winreg = "0.10"
windows-service = "0.4.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.35"
features = ["Win32_Foundation", "Win32_System_IO", "Win32_Networking_WinSock",
            "Win32_Storage_FileSystem", "Win32_NetworkManagement_IpHelper"]
