[package]
name = "rqst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = {git = "https://github.com/cloudflare/quiche.git", features = ["qlog"]}
ring = "0.16"
url = "1"
tokio = { version = "1.17", features = ["full", "tracing"] }
num_cpus = "1.0"
bytes = "1"
pcap-file = "1.1.1"
clap = { version = "3.1.3", features = ["cargo"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.6.1"
flexi_logger = "0.22"
socket2 = "0.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.34"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[target.'cfg(target_os = "linux")'.dependencies]
tokio-tun = "0.5.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
windows-service = "0.4.0"