[package]
name = "rqst"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = {path ="../quiche/quiche", features = ["qlog"]}
ring = "0.16"
url = "2.3"
tokio = { version = "1.26", features = ["full", "tracing"] }
bytes = "1.4"
pcap-file = "2.0"
clap = { version = "3.1", features = ["cargo"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.10"
flexi_logger = "0.25"
socket2 = "0.5"
if-addrs = "0.10.1"
if-watch = { version = "3.0.0", features = ["tokio"] }
async-stream = "0.3"
tokio-stream = "0.1"
serde = "1.0"
serde_json = "1.0"
toml = "0.5.9"
anyhow = "1.0"
tokio-util = { version = "0.7.7", features = ["codec"] }
etherparse = "0.13"
ipnet = { version = "2.7", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
tokio-tun = "0.7"

[target.'cfg(windows)'.dependencies]
once_cell = "1.17"
winreg = "0.11"
windows-service = "0.6.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45"
features = ["Win32_Foundation", "Win32_System_IO", "Win32_Networking_WinSock",
            "Win32_Storage_FileSystem", "Win32_NetworkManagement_IpHelper"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.46"
features = ["Foundation", "Foundation_Collections", "Networking_Connectivity"]
